# dabi2-vorbereitung

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/hofmann/: DABI_2_Stand_22_06_2025.ipynb  DSCB420 - 2024 - Test - H.csv  Hofmann.apkg  Projekt_live.ipynb  model_summary.txt  notes.txt  project_a2.ipynb  vorbereitung.ipynb
notebooks/hofmann/statsmodel/transformationen/: transform.ipynb
notebooks/hofmann/statsmodel/uebung/: uebung.ipynb
notebooks/hofmann/statsmodel/zeitreihenanalyse/: analyse.ipynb  analyse2.ipynb  multiple_user.ipynb
notebooks/kueppers/: Kueppers.apkg
notebooks/kueppers/instacart-dataset/: todo.txt
notebooks/kueppers/pandas/data_aggregation/: aggregation.ipynb  examples.ipynb  merging.ipynb
notebooks/kueppers/pandas/data_cleansing/: data_cleansing.ipynb  examples.ipynb
notebooks/kueppers/pandas/data_manipulation/: apply_alternatives.ipynb  data_manipulation.ipynb  examples.ipynb
notebooks/kueppers/pandas/data_structures/: dataframe.ipynb  examples.ipynb  series.ipynb
notebooks/kueppers/prefect/: .env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  run_worker.py
notebooks/kueppers/prefect/dbt_setup/: .user.yml  dev.duckdb  profiles.yml
notebooks/kueppers/prefect/dbt_setup/data/: raw_kunden.csv
notebooks/kueppers/prefect/dbt_setup/models/marts/: dim_date.sql
notebooks/kueppers/prefect/dbt_setup/models/staging/: source.yml  stg_kunden.sql
notebooks/kueppers/prefect/flows/: example.py
notebooks/kueppers/prefect/init_scripts/: init_db.sql
notebooks/kueppers/prefect/tasks/: dbt_runner.py
(+39 files in other folders)
