[project]
name = "dabi2-vorbereitung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
