[project]
name = "dabi2-vorbereitung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "dbt>=1.0.0.40.5",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.3.1",
    "fastparquet>=2024.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "prefect-dbt==0.7.0rc1",
    "prefect-docker>=0.6.6",
    "prefect-sqlalchemy>=0.5.3",
    "prefect[dbt]>=3.4.6",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
